namespace-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-namespace
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello-namespace
spec:
  rules:
  - host: 192.168.1.2.nip.io
