nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dev-deployment
  namespace: hello-namespace
  labels:
    app: nginx-dev-label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-dev-label
  template:
    metadata:
      labels:
        app: nginx-dev-label
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
          - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: registry-1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-dev-service
spec:
  type: NodePort
  selector:
    app: nginx-dev-label
  ports:
  - nodePort: 30093
    port: 92
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-dev-ingress
  namespace: dev
spec:
  rules:
  - host: 20.92.193.34.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-dev-service
          servicePort: 92
